@@ -321,3 +321,4 @@
 20071120 code: scan_double and scan_float scanned one byte less than necessary
                when scanning negative floating point numbers.
 20070727 version: corelib 0.58
+20080115 code: updated inst-check.c
